# prime-retail-cpp

./: .gitignore  CMakeLists.txt  README.md  generate_inventory.py
data/: inventory_10k.json  inventory_10k_multi.json  primes_local_example.json  primes_master.json  products.json
data/segments/BrandA/: inventory.json  primes.json
data/segments/BrandB/: inventory.json  primes.json
data/segments/BrandC/: inventory.json  primes.json
src/cpp/: primekit.cpp  primekit.h
src/js/: main.js
src/wgsl/: shader.wgsl
static/: index.html  style.css
